# cpp-cicd-poc

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt
cicd/: docker-compose.yaml
cicd/jenkins/: Dockerfile  Jenkinsfile  casc.yaml  plugins.txt
src/: main.cpp  print_time.cpp  print_time.h
src/print_time/: main.cpp
tests/: main_test.cpp  print_time_test.cpp
